--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
             <ul class="redes-sociais">
                 <li>
-                    <a href="https://drive.google.com/file/d/12_MhVH2vIE2gHSUdKZhPAKnGvG6kKNNk/view?usp=sharing" target="_blank" class="curriculo">currículo</a>
+                    <a href="https://drive.google.com/file/d/12_MhVH2vIE2gHSUdKZhPAKnGvG6kKNNk/view?usp=sharing" target="_blank" class="curriculo">Currículo</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/pedro-guerra-sobrinho/" target="_blank" class="linkedin">Linkedin</a>
                 </li>
                 <li>
-                    <a href="https://github.com/PeehDrums" target="_blank" class="github">github</a>
+                    <a href="https://github.com/PeehDrums" target="_blank" class="github">Github</a>
                 </li>
             </ul>
           </div>
