--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a href="https://drive.google.com/file/d/12_MhVH2vIE2gHSUdKZhPAKnGvG6kKNNk/view?usp=sharing" target="_blank" class="Curriculo">Currículo</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/pedro-guerra-sobrinho/" target="_blank" class="Linkedin">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/pedro-guerra-sobrinho/" target="_blank" class="LinkedIn">LinkedIn</a>
                 </li>
                 <li>
                     <a href="https://github.com/PeehDrums" target="_blank" class="GitHub">Github</a>
